objects/Medical_Benefit__c.object
<CustomObject>
    <fields>
        <fullName>Account_Demo__c</fullName>
        <formula>Implementation_Tracking_ID__r.Account_Demo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Demo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <formula>IF( ISBLANK( Implementation_Tracking_ID__r.Account_Legal_Name__r.Id ), &apos;&apos;, HYPERLINK(Implementation_Tracking_ID__r.Account_Legal_Name__r.Id, Implementation_Tracking_ID__r.Account_Legal_Name__r.Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anthem_Entity__c</fullName>
        <formula>IF( NOT(ISBLANK( Implementation_Tracking_ID__c)) , TEXT(Implementation_Tracking_ID__r.Account_Legal_Name__r.Anthem_Entity__c),&apos;&apos;)</formula>
        <label>Anthem Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Date_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approved_Date_Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Auto_Adjudication_ACD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Actual completion date for adjudication (WGS only)</inlineHelpText>
        <label>Auto Adjudication ACD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Auto_Adjudication_ECD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Expected completion date for adjudication (WGS only)</inlineHelpText>
        <label>Auto Adjudication ECD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Auto_Adjudication_Required__c</fullName>
        <label>Auto Adjudication Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPD_ACD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BPD ACD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BPD_Completion_ECD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BPD Completion ECD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BPD_Sent_For_Approval__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BPD Sent For Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BPD_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BPD Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benefit_Analyst_Assigned__c</fullName>
        <formula>Implementation_Tracking_ID__r.Benefit_Analyst_Assigned__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Benefit Analyst Assigned</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Coding_ACD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Actual completion date for coding</inlineHelpText>
        <label>Benefit Coding ACD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benefit_Coding_ECD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Expected completion date for coding</inlineHelpText>
        <label>Benefit Coding ECD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benefit_Coding_Precert_Completed__c</fullName>
        <formula>Implementation_Tracking_ID__r.Benefit_Coding_Precert_Completed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Benefit Coding Percent Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Benefit_Coding_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Start date for coding</inlineHelpText>
        <label>Benefit Coding Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benefit_Testing_ACD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Testing ACD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benefit_Testing_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Testing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Blue_Exchange_Production_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Blue Exchange Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Claim_System__c</fullName>
        <formula>Implementation_Tracking_ID__r.Claim_System__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clean_Paperwork__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Clean Paperwork</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_SME_Queue_time__c</fullName>
        <formula>IF( 
ISBLANK(In_Progress_Date_Completed__c),Now() - Not_Started_Date_Completed__c, 
(In_Progress_Date_Completed__c - Not_Started_Date_Completed__c) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current SME Queue time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_SME_time__c</fullName>
        <formula>IF( 
ISBLANK(Approved_Date_Completed__c),((Now() - In_Progress_Date_Completed__c) - Pending_Correction_Time__c) , 
((Approved_Date_Completed__c - In_Progress_Date_Completed__c) - Pending_Correction_Time__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current SME time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EBA_Request_ECD__c</fullName>
        <formula>Implementation_Tracking_ID__r.EBA_Request_ECD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Expected completion date</inlineHelpText>
        <label>EBA Request ECD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EBA_Requested_ACD__c</fullName>
        <formula>Implementation_Tracking_ID__r.EBA_Requested_ACD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Actual completion date</inlineHelpText>
        <label>EBA Requested ACD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EPID_Product_Config_Approval_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EPID Product Config Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EPID_Product_Config_Submission_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EPID Product Config Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EPID_s_Assigned__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EPID#s Assigned</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <formula>IF( ISBLANK( Implementation_Tracking_ID__r.Group_Number__r.Id ), &apos;&apos;, HYPERLINK(Implementation_Tracking_ID__r.Group_Number__r.Id, Implementation_Tracking_ID__r.Group_Number__r.Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Size__c</fullName>
        <formula>Implementation_Tracking_ID__r.Group_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HPCC_Association_MBCC_Completion__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HPCC Association MBCC Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HPCC_Association_MBCC_Submission__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HPCC Association MBCC Submission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HQ_State__c</fullName>
        <formula>TEXT(Implementation_Tracking_ID__r.Account_Legal_Name__r.HQ_State__c)</formula>
        <label>HQ State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Number__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Case_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Start_Date__c</fullName>
        <description>This field refers to the Implementation Case Start Date field of the related Implementation Case.</description>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.EffectiveDate</formula>
        <label>Implementation Case Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Effective_Date__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Tracking_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Tracking ID</label>
        <referenceTo>Implementation_Tracking__c</referenceTo>
        <relationshipLabel>Medical Benefits</relationshipLabel>
        <relationshipName>Medical_Benefits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation_Type__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Progress_Date_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>In_Progress_Date_Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JAA_Group__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.JAA_Group__c</formula>
        <label>JAA_Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JIRA_Request_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Equivalent to EWM Record ID</inlineHelpText>
        <label>JIRA Request ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoggedinProfile__c</fullName>
        <formula>$User.ProfileName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LoggedinProfile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCS_Group__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.MCS_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MCS Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedicalBenefits_Check__c</fullName>
        <description>US18519</description>
        <formula>IF( 
AND( 
Implementation_Tracking_ID__r.SBC_Approved__c, 

Implementation_Tracking_ID__r.UW_Approved__c, 
Implementation_Tracking_ID__r.UW_Life_Disability_Approved__c, 
Implementation_Tracking_ID__r.UW_Medical_Approved__c, 
Implementation_Tracking_ID__r.UW_Vision_Approved__c, 

Implementation_Tracking_ID__r.InterPlan_Approved__c), 
True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MedicalBenefits Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_Started_Date_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Not_Started_Date_Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Overall_Status__c</fullName>
        <formula>TEXT( Implementation_Tracking_ID__r.Overall_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>Owner:User.FirstName + &apos; &apos; +  Owner:User.LastName +  Owner:Queue.QueueName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PendingCorrectionAction__c</fullName>
        <formula>IF(AND(OR(LoggedinProfile__c ==&apos;SME&apos;,LoggedinProfile__c ==&apos;SME Dual&apos;,LoggedinProfile__c ==&apos;Specialty Post Sales&apos;, LoggedinProfile__c ==&apos;Specialty Post Sales Dual&apos;), Tech_Support_Medical_Benefits__c == False),&apos;Y&apos;,&apos;N&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PendingCorrectionAction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_Creator__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Correction Creator</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_Time__c</fullName>
        <label>Pending Correction Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pending_Corrections_Stage__c</fullName>
        <description>This field fetches the associated Pending Correction&apos;s Stage.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Corrections Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Date__c</fullName>
        <formula>Implementation_Tracking_ID__r.Production_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Receipt_Date__c</fullName>
        <formula>Implementation_Tracking_ID__r.Receipt_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date when EBA receives request</inlineHelpText>
        <label>Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Implementation_Tracking_ID__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Situs_State__c</fullName>
        <formula>TEXT(Implementation_Tracking_ID__r.Account_Legal_Name__r.Situs_State__c )</formula>
        <label>Situs State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01 Not Started</fullName>
                </value>
                <value>
                    <fullName>02 In Progress</fullName>
                    <default>true</default>
                    <label>02 In Progress</label>
                </value>
                <value>
                    <fullName>03 Pending Review</fullName>
                    <label>03 Pending Correction</label>
                </value>
                <value>
                    <fullName>03 Pending Correction Returned</fullName>
                </value>
                <value>
                    <fullName>04 Approved</fullName>
                </value>
                <value>
                    <fullName>05 Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_at_EBA_Request_Level__c</fullName>
        <formula>Implementation_Tracking_ID__r.Status_At_EBA_Request_Level__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status at EBA Request Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Tasks__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter total number of contract/package codes</inlineHelpText>
        <label>Sub-Tasks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Support_Medical_Benefits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech Support Medical Benefits</label>
        <type>Checkbox</type>
    </fields>
    <label>Medical Benefits</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Overall_Status__c</columns>
        <columns>Owner__c</columns>
        <columns>Production_Date__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Medical_Benefits_Key_Account</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Benefit_Analyst_Assigned__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Production_Date__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <columns>Situs_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Group_Size__c</field>
            <operation>equals</operation>
            <value>51 - 99</value>
        </filters>
        <label>All Medical Benefits - Key Account</label>
    </listViews>
    <listViews>
        <fullName>JAA_Business</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Tracking_ID__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Stage__c</columns>
        <columns>Benefit_Analyst_Assigned__c</columns>
        <columns>Claim_System__c</columns>
        <columns>PendingCorrectionAction__c</columns>
        <columns>Situs_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>JAA_Group__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>01 Not Started,02 In Progress,03 Pending Review</value>
        </filters>
        <label>JAA Business</label>
    </listViews>
    <listViews>
        <fullName>JAA_Business_Approved_or_Declined</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Tracking_ID__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Stage__c</columns>
        <columns>Benefit_Analyst_Assigned__c</columns>
        <columns>Claim_System__c</columns>
        <columns>PendingCorrectionAction__c</columns>
        <columns>Situs_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>JAA_Group__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>04 Approved,05 Declined</value>
        </filters>
        <label>JAA Business Approved or Declined</label>
    </listViews>
    <listViews>
        <fullName>Local_MedicalBenefitAssignedKeyAccounts</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Tracking_ID__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Stage__c</columns>
        <columns>Benefit_Analyst_Assigned__c</columns>
        <columns>Claim_System__c</columns>
        <columns>PendingCorrectionAction__c</columns>
        <columns>Situs_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>equals</operation>
            <value>Local/Large Group</value>
        </filters>
        <filters>
            <field>Group_Size__c</field>
            <operation>equals</operation>
            <value>51 - 99</value>
        </filters>
        <filters>
            <field>JAA_Group__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>02 In Progress,03 Pending Review</value>
        </filters>
        <label>Local–MedicalBenefitAssignedKeyAccounts</label>
    </listViews>
    <listViews>
        <fullName>Local_MedicalBenefitUnassignedKeyAccount</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Tracking_ID__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Stage__c</columns>
        <columns>Benefit_Analyst_Assigned__c</columns>
        <columns>Claim_System__c</columns>
        <columns>PendingCorrectionAction__c</columns>
        <columns>Situs_State__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>equals</operation>
            <value>Local/Large Group</value>
        </filters>
        <filters>
            <field>Group_Size__c</field>
            <operation>equals</operation>
            <value>51 - 99</value>
        </filters>
        <filters>
            <field>JAA_Group__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Local–MedicalBenefitUnassignedKeyAccount</label>
        <queue>Medical_Benefits_Local</queue>
    </listViews>
    <listViews>
        <fullName>Local_Medical_Benefit_Assigned_CA</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Tracking_ID__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Benefit_Analyst_Assigned__c</columns>
        <columns>Stage__c</columns>
        <columns>Claim_System__c</columns>
        <columns>PendingCorrectionAction__c</columns>
        <columns>Situs_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>equals</operation>
            <value>Local/Large Group</value>
        </filters>
        <filters>
            <field>Situs_State__c</field>
            <operation>equals</operation>
            <value>California</value>
        </filters>
        <filters>
            <field>JAA_Group__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>02 In Progress,03 Pending Review</value>
        </filters>
        <filters>
            <field>Benefit_Analyst_Assigned__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Local – Medical Benefit Assigned CA</label>
    </listViews>
    <listViews>
        <fullName>Local_Medical_Benefit_Assigned_CO_NV</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Tracking_ID__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Stage__c</columns>
        <columns>Benefit_Analyst_Assigned__c</columns>
        <columns>Claim_System__c</columns>
        <columns>PendingCorrectionAction__c</columns>
        <columns>Situs_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>equals</operation>
            <value>Local/Large Group</value>
        </filters>
        <filters>
            <field>Situs_State__c</field>
            <operation>equals</operation>
            <value>Colorado,Nevada</value>
        </filters>
        <filters>
            <field>JAA_Group__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>02 In Progress,03 Pending Review</value>
        </filters>
        <filters>
            <field>Benefit_Analyst_Assigned__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Local – Medical Benefit Assigned CO,NV</label>
    </listViews>
    <listViews>
        <fullName>Local_Medical_Benefit_Assigned_CT</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Tracking_ID__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Stage__c</columns>
        <columns>Benefit_Analyst_Assigned__c</columns>
        <columns>Claim_System__c</columns>
        <columns>PendingCorrectionAction__c</columns>
        <columns>Situs_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>equals</operation>
            <value>Local/Large Group</value>
        </filters>
        <filters>
            <field>Situs_State__c</field>
            <operation>equals</operation>
            <value>Connecticut</value>
        </filters>
        <filters>
            <field>JAA_Group__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>02 In Progress,03 Pending Review</value>
        </filters>
        <filters>
            <field>Benefit_Analyst_Assigned__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Local – Medical Benefit Assigned CT</label>
    </listViews>
    <listViews>
        <fullName>Local_Medical_Benefit_Assigned_GA</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Tracking_ID__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Stage__c</columns>
        <columns>Benefit_Analyst_Assigned__c</columns>
        <columns>Claim_System__c</columns>
        <columns>PendingCorrectionAction__c</columns>
        <columns>Situs_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>equals</operation>
            <value>Local/Large Group</value>
        </filters>
        <filters>
            <field>Situs_State__c</field>
            <operation>equals</operation>
            <value>Georgia</value>
        </filters>
        <filters>
            <field>JAA_Group__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>02 In Progress,03 Pending Review</value>
        </filters>
        <filters>
            <field>Benefit_Analyst_Assigned__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Local – Medical Benefit Assigned GA</label>
    </listViews>
    <listViews>
        <fullName>Local_Medical_Benefit_Assigned_IN</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Tracking_ID__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Stage__c</columns>
        <columns>Benefit_Analyst_Assigned__c</columns>
        <columns>Claim_System__c</columns>
        <columns>PendingCorrectionAction__c</columns>
        <columns>Situs_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>equals</operation>
            <value>Local/Large Group</value>
        </filters>
        <filters>
            <field>Situs_State__c</field>
            <operation>equals</operation>
            <value>Indiana</value>
        </filters>
        <filters>
            <field>JAA_Group__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>02 In Progress,03 Pending Review</value>
        </filters>
        <filters>
            <field>Benefit_Analyst_Assigned__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Local – Medical Benefit Assigned IN</label>
    </listViews>
    <listViews>
        <fullName>Local_Medical_Benefit_Assigned_KY</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Tracking_ID__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Stage__c</columns>
        <columns>Benefit_Analyst_Assigned__c</columns>
        <columns>Claim_System__c</columns>
        <columns>PendingCorrectionAction__c</columns>
        <columns>Situs_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>equals</operation>
            <value>Local/Large Group</value>
        </filters>
        <filters>
            <field>Situs_State__c</field>
            <operation>equals</operation>
            <value>Kentucky</value>
        </filters>
        <filters>
            <field>JAA_Group__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>02 In Progress,03 Pending Review</value>
        </filters>
        <filters>
            <field>Benefit_Analyst_Assigned__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Local – Medical Benefit Assigned KY</label>
    </listViews>
    <listViews>
        <fullName>Local_Medical_Benefit_Assigned_ME</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Tracking_ID__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Stage__c</columns>
        <columns>Benefit_Analyst_Assigned__c</columns>
        <columns>Claim_System__c</columns>
        <columns>PendingCorrectionAction__c</columns>
        <columns>Situs_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>equals</operation>
            <value>Local/Large Group</value>
        </filters>
        <filters>
            <field>Situs_State__c</field>
            <operation>equals</operation>
            <value>Maine</value>
        </filters>
        <filters>
            <field>JAA_Group__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>02 In Progress,03 Pending Review</value>
        </filters>
        <filters>
            <field>Benefit_Analyst_Assigned__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Local – Medical Benefit Assigned ME</label>
    </listViews>
</CustomObject>